FIX too much space under dialog buttons

--- a/Template/js/template.css
+++ b/Template/js/template.css
@@ -17,6 +17,7 @@ ul.datalist li {padding: 4px 0;}
 /* Dialogs */
 .modal-body > .nav-tabs-custom {margin-bottom: 0; box-shadow: none;}
 .nav-tabs-custom>.nav-tabs>li:first-of-type.active>a {border-left-color: #f4f4f4;}
+.modal-footer > .exf-toolbar {padding-bottom: 0;}
 
 /* Tabs */
 .nav-tabs a[data-toggle=tab].disabled {color: #999}
@@ -65,7 +66,7 @@ td.nmpd-target{border: 1px solid #d2d6de !important;}
 /* Toolbars and buttons */
 .exf-toolbar {padding-bottom: 7px;}
 .exf-toolbar .btn {margin-bottom: 3px;}
-.exf-btn-group {display: inline-block}
+.exf-btn-group {display: inline-block; vertical-align: top;}
 .exf-btn-group+.dropdown, .exf-btn-group+.exf-btn-group {margin-left: 3px;}
 
 /* sortable */
